@@ -1,5 +1,6 @@
 Changes for 1.4.1:
 
+ - added "PerfCounter" configuration parameter (Eugene)
  - cleaned code to avoid '... may be used uninitialized in this function' warnings (Alexei)
  - fixed printing of debug info in delete_history() (Alexei)
  - fixed incorrect type of icmpInAddrMaskReps in SNMPv1 template (Alexei)
